# binscatter

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  PLAN.md  PR_REVIEW_ISSUES.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  deploy-images.yaml  generate-images.yaml
binscatter/: __init__.py  core.py  df_utils.py  main.py
docs/: perf_notes.md  playground.ipynb
examples/: benchmark_rule_of_thumb.py  comprehensive_demo.ipynb  demo.ipynb  demo.py  examples.ipynb  time_pyspark.py
notebooks/: binscatter.ipynb
scripts/: benchmark_pyspark_ml.py  debug_binscatter.py  make_images.py  repl.py  replicate_binscatter.py  time_pyspark.py
scripts/optuna_example/: optimize_elasticnet.py  optimize_lightgbm.py  plot_elasticnet.py  plot_learning_rate.py
scripts/readme/: make_plots_readme.py
scripts/replicate_binscatter/: make_plots.py  prep_data.py
src/binscatter/: bin_selectors.py  core.py  dpi.py  dummy_builders.py  inference.py  quantiles.py
tests/: conftest.py  test_bin_scatter.py  test_binscatter.py  test_df_utils.py  test_fallback.py  test_performance.py  test_pipeline.py  test_preperation.py  test_unit.py  test_utils.py
